# datafusion-substrait

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: consumer.rs  lib.rs  producer.rs  serializer.rs
tests/: roundtrip.rs  serialize.rs
