[package]
name = "datafusion-substrait"
description = "DataFusion Substrait Provider and Consumer"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "15.0"
substrait = "0.3"
tokio = "1.17"
async-recursion = "1.0"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
prost-build = { version = "0.11" }
